# makefile

./: LICENSE  README.md
c/cmake/example/: CMakeLists.txt  README.md
c/cmake/example/src/: CMakeLists.txt  main.c
c/generic/: makefile
c/generic/example/: makefile
c/generic_makefile/: makefile
cpp/cmake/example/: CMakeLists.txt  README.md
cpp/cmake/example/src/: CMakeLists.txt  main.cpp
cpp/generic/example/: makefile
cpp/generic_makefile/example/: makefile
